--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "normalize.css": "^8.0.1",
+    "vant": "^2.0.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.2.1",
@@ -34,6 +36,7 @@
     "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "ts-import-plugin": "^1.5.5",
     "typescript": "^3.5.2",
     "vue-template-compiler": "^2.6.10"
   },
